更改项目结构，使用Pagehelper和自动生成代码

--- a/src/main/resource/jdbc.properties
+++ b/src/main/resource/jdbc.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/gl
+url=jdbc:mysql://localhost:3306/zggl
 username=root
 password=szj0a01
 #定义初始连接数
