--- a/pom.xml
+++ b/pom.xml
@@ -200,7 +200,11 @@
       <artifactId>commons-codec</artifactId>
       <version>1.9</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>5.0.3</version>
+    </dependency>
   </dependencies>
 
   <build>
