--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,13 @@
       <artifactId>pagehelper</artifactId>
       <version>5.0.3</version>
     </dependency>
+
+    <!--excel表格用-->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>3.9</version>
+    </dependency>
   </dependencies>
 
   <build>
