--- a/src/main/resource/jdbc.properties
+++ b/src/main/resource/jdbc.properties
@@ -2,13 +2,13 @@ driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/zggl
 username=root
 password=szj0a01
-#定义初始连接数
+#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u02BC\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 initialSize=0  
-#定义最大连接数
-maxActive=20  
-#定义最大空闲
+#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
+maxActive=20
+#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
 maxIdle=20  
-#定义最小空闲
+#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0421\uFFFD\uFFFD\uFFFD\uFFFD
 minIdle=1  
-#定义最长等待时间
+#\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uECE4\uFFFD\u0234\uFFFD\u02B1\uFFFD\uFFFD
 maxWait=60000  
