--- a/src/main/resource/log4j.properties
+++ b/src/main/resource/log4j.properties
@@ -1,17 +1,17 @@
-### 设置###
-log4j.rootLogger = INFO,Console
+### \uFFFD\uFFFD\uFFFD\uFFFD###
+log4j.rootLogger = DEBUG,Console
 
-### 输出信息到控制抬 ###
+### \uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u03E2\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0327 ###
 log4j.appender.Console = org.apache.log4j.ConsoleAppender
 log4j.appender.Console.Target = System.out
 log4j.appender.Console.layout = org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
 log4j.appender.Console.encoding=UTF-8
-###显示SQL语句部分
-###log4j.logger.com.ibatis=DEBUG
-###log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
-###log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
-###log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
-###log4j.logger.java.sql.Connection=DEBUG
-###log4j.logger.java.sql.Statement=DEBUG
-###log4j.logger.java.sql.PreparedStatement=DEBUG
+###\uFFFD\uFFFD\u02BESQL\uFFFD\uFFFD\u4CBF\uFFFD\uFFFD
+log4j.logger.com.ibatis=DEBUG
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+log4j.logger.java.sql.Connection=DEBUG
+log4j.logger.java.sql.Statement=DEBUG
+log4j.logger.java.sql.PreparedStatement=DEBUG
