--- a/src/main/resource/log4j.properties
+++ b/src/main/resource/log4j.properties
@@ -4,7 +4,7 @@ log4j.appender.Console = org.apache.log4j.ConsoleAppender
 log4j.appender.Console.Target = System.out
 log4j.appender.Console.layout = org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
-log4j.appender.Console.encoding=UTF-8
+log4j.appender.Console.encoding=GBK
 
 log4j.logger.com.ibatis=DEBUG
 log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
