--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,13 @@
       <artifactId>poi-ooxml</artifactId>
       <version>3.9</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz</artifactId>
+      <version>2.2.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
